# Arcanum

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
crates/arcanum-geometry/: Cargo.toml
crates/arcanum-geometry/src/: discretize.rs  errors.rs  images.rs  junctions.rs  lib.rs  mesh.rs  tagmap.rs  transforms.rs
crates/arcanum-matrix-fill/: Cargo.toml
crates/arcanum-matrix-fill/src/: lib.rs
crates/arcanum-matrix-solve/: Cargo.toml
crates/arcanum-matrix-solve/src/: lib.rs
crates/arcanum-nec-import/: Cargo.toml
crates/arcanum-nec-import/src/: cards.rs  errors.rs  lexer.rs  lib.rs  router.rs  tag_registry.rs
crates/arcanum-postprocess/: Cargo.toml
crates/arcanum-postprocess/src/: lib.rs
crates/arcanum-py/: Cargo.toml
crates/arcanum-py/src/: lib.rs
docs/nec-import/: card-reference.md  design.md  dumbbell-ori.nec  input-format.md  validation.md
docs/nec-import/reference-decks/: half-wave-dipole.nec  helix-axial.nec  (+1 more)
docs/phase1-geometry/: design.md  math.md  validation.md
docs/phase2-matrix-fill/: design.md  math.md  validation.md
docs/phase3-matrix-solve/: design.md  math.md  validation.md
docs/phase4-postprocessing/: design.md  math.md  validation.md
docs/references/: bibliography.md
examples/: mesh_inspect.py  nec2json.py  nec_inspect.py
python/arcanum/: __init__.py  geometry.py  matrix_fill.py  matrix_solve.py  nec_import.py  postprocess.py
tests/: conftest.py
tests/nec_import/: conftest.py  test_errors.py  test_fmt.py  test_parse.py  test_real.py  test_warnings.py
(+14 files in other folders)
